--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,9 @@ install: |
   export CURRENT_NPM_VERSION="$(npm --version)"
   export LATEST_NPM_VERSION="$(npm view npm version)"
   if test "$CURRENT_NPM_VERSION" != "$LATEST_NPM_VERSION"; then
-    echo "running an old npm version, upgrading"
+    echo "running an old npm version, upgrading npm..."
     npm instal npm --global --cache-min=Infinity
+    echo "...npm upgrade complete
   fi
 
   # Ensure dependencies install with a LTS node version
@@ -41,31 +42,96 @@ install: |
   export CURRENT_NODE_VERSION="$(node --version)"
   export LTS_NODE_VERSIONS="$(nvm ls-remote --lts)"
   if echo "$LTS_NODE_VERSIONS" | grep "$CURRENT_NODE_VERSION"; then
-    echo "running on a LTS node version, completing setup"
+    echo "running on a LTS node version, completing setup..."
     npm run our:setup
+    echo "...setup complete with current LTS version"
   else
-    echo "running on a non-LTS node version, completing setup on a LTS node version"
+    echo "running on a non-LTS node version, completing setup on a LTS node version..."
     nvm install --lts
-    export LTS_NODE_VERSION="$(node --version)"
+    export LTS_NODE_INSTALLED_VERSION="$(node --version)"
     npm run our:setup
     nvm use "$TRAVIS_NODE_VERSION"
+    echo "...setup complete with LTS"
   fi
 
 
 before_script: |
   # Ensure compilation and linting occur on a LTS node version
   # https://github.com/balupton/awesome-travis#use-lts-node-version-for-preparation
-  if test "$LTS_NODE_VERSION"; then
-    echo "running on a non-LTS node version, compiling with LTS, skipping linting"
-    nvm use "$LTS_NODE_VERSION"
+  if test "$LTS_NODE_INSTALLED_VERSION"; then
+    echo "running on a non-LTS node version, compiling with LTS, skipping linting..."
+    nvm use "$LTS_NODE_INSTALLED_VERSION"
     npm run our:compile
     nvm use "$TRAVIS_NODE_VERSION"
+    echo "...compiled"
   else
-    echo "running on a LTS node version, compiling and linting"
+    echo "running on a LTS node version, compiling and linting..."
     npm run our:compile && npm run our:verify
+    echo "...compiled and linted"
   fi
 
 
-# Custom Notifications
+after_success: |
+  # Release to Surge
+  # https://github.com/balupton/awesome-travis#release-to-surge
+  # travis encrypt "SURGE_LOGIN=$SURGE_LOGIN" --add env.global
+  # travis encrypt "SURGE_TOKEN=$SURGE_TOKEN" --add env.global
+  export CURRENT_NODE_VERSION="$(node --version)"
+  export LTS_NODE_LATEST_VERSION="$(nvm version-remote --lts)"
+  if test "$CURRENT_NODE_VERSION" = "$LTS_NODE_LATEST_VERSION"; then
+    echo "running on latest LTS node version, performing release to surge..."
+    echo "preparing release"
+    npm run our:meta
+    echo "installing surge"
+    npm install surge
+    echo "performing deploy"
+    export SURGE_SLUG="$(echo $TRAVIS_REPO_SLUG | sed 's/^\(.*\)\/\(.*\)/\2.\1/')"
+    if test "$TRAVIS_BRANCH"; then
+      echo "deploying branch..."
+      surge --project . --domain "$TRAVIS_BRANCH.$SURGE_SLUG.surge.sh"
+    fi
+    if test "$TRAVIS_TAG"; then
+      echo "deploying tag..."
+      surge --project . --domain "$TRAVIS_TAG.$SURGE_SLUG.surge.sh"
+    fi
+    if test "$TRAVIS_COMMIT"; then
+      echo "deploying commit..."
+      surge --project . --domain "$TRAVIS_COMMIT.$SURGE_SLUG.surge.sh"
+    fi
+    echo "...released to surge"
+  else
+    echo "running on non-latest LTS node version, skipping release to surge"
+  fi
+
+  # Release to NPM
+  # https://github.com/balupton/awesome-travis#release-to-npm
+  # travis encrypt "NPM_USERNAME=$NPM_USERNAME" --add env.global
+  # travis encrypt "NPM_PASSWORD=$NPM_PASSWORD" --add env.global
+  # travis encrypt "NPM_EMAIL=$NPM_EMAIL" --add env.global
+  export CURRENT_NODE_VERSION="$(node --version)"
+  export LTS_NODE_LATEST_VERSION="$(nvm version-remote --lts)"
+  if test "$CURRENT_NODE_VERSION" = "$LTS_NODE_LATEST_VERSION"; then
+    if test "$TRAVIS_TAG"; then
+      echo "logging in..."
+      echo -e "$NPM_USERNAME\n$NPM_PASSWORD\n$NPM_EMAIL" | npm login
+      echo "publishing..."
+      npm publish
+      echo "...released to npm"
+    else
+      echo "non-tag, no need for release"
+    fi
+  else
+    echo "running on non-latest LTS node version, skipping release to npm"
+  fi
+
+
+# Custom Configuration
+env:
+  global:
+  # Release to Surge
+  # Release to NPM
+
 # https://github.com/balupton/awesome-travis#slack
 # https://github.com/balupton/awesome-travis#email
+# travis encrypt --org "$SLACK_SUBDOMAIN:$SLACK_TRAVIS_TOKEN#updates" --add notifications.slack
+# travis encrypt --org "$TRAVIS_NOTIFICATION_EMAIL" --add notifications.email.recipients
