--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# 2017 January 27
+# 2017 February 24
 # https://github.com/bevry/base
 
 
@@ -23,7 +23,7 @@ matrix:
     - node_js: "0.10"
 cache:
   directories:
-    - node_modules
+    - $HOME/.npm  # npm's cache
 
 
 install: |
