--- a/.travis.yml
+++ b/.travis.yml
@@ -121,20 +121,17 @@ after_success: |
 
 
 # Custom Configuration
+# https://github.com/bevry/base#configuration
 env:
   global:
   # Release to NPM
   # https://github.com/balupton/awesome-travis#release-to-npm
-  # travis encrypt "NPM_USERNAME=$NPM_USERNAME" --add env.global
-  # travis encrypt "NPM_PASSWORD=$NPM_PASSWORD" --add env.global
-  # travis encrypt "NPM_EMAIL=$NPM_EMAIL" --add env.global
+  #
   # Release to Surge
   # https://github.com/balupton/awesome-travis#release-to-surge
-  # travis encrypt "SURGE_LOGIN=$SURGE_LOGIN" --add env.global
-  # travis encrypt "SURGE_TOKEN=$SURGE_TOKEN" --add env.global
-
+  #
+  # Custom Configuration for this repository
+  #
 
 # https://github.com/balupton/awesome-travis#slack
 # https://github.com/balupton/awesome-travis#email
-# travis encrypt --org "$SLACK_SUBDOMAIN:$SLACK_TRAVIS_TOKEN#updates" --add notifications.slack
-# travis encrypt --org "$TRAVIS_NOTIFICATION_EMAIL" --add notifications.email.recipients
