--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   "browser": "es2015/index.js",
   "scripts": {
     "our:setup": "npm install",
-    "our:clean": "rm -Rf ./docs ./es2015",
+    "our:clean": "rm -Rf ./docs ./es2015 ./out",
     "our:compile": "npm run our:compile:es2015",
     "our:compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
     "our:meta": "npm run our:meta:docs && npm run our:meta:projectz",
