added missing || exit -1

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ install: |
     echo "...setup complete with current LTS version"
   else
     echo "running on a non-LTS node version, completing setup on a LTS node version..."
-    nvm install --lts
+    nvm install --lts || exit -1
     export LTS_NODE_INSTALLED_VERSION="$(node --version)" || exit -1
     npm run our:setup || exit -1
     nvm use "$TRAVIS_NODE_VERSION" || exit -1
