--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# 2017 March 3
+# 2017 August 2
 # https://github.com/bevry/base
 
 root = true
@@ -10,14 +10,13 @@ trim_trailing_whitespace = true
 insert_final_newline = false
 indent_style = tab
 
-[*.json]
-indent_style = space
-indent_size = 2
+[*.mk]
+indent_style = tab
 
-[*.yml]
+[{*.json,*.yml}]
 indent_style = space
 indent_size = 2
 
 [*.md]
 indent_style = space
-indent_size = 2
+indent_size = 4
