--- a/.editorconfig
+++ b/.editorconfig
@@ -10,8 +10,9 @@ trim_trailing_whitespace = true
 insert_final_newline = false
 indent_style = tab
 
-[{*.mk,*.python}]
+[{*.mk,*.py}]
 indent_style = tab
+indent_size = 4
 
 [*.md]
 indent_style = space
