--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# 2017 August 2
+# 2018 January 24
 # https://github.com/bevry/base
 
 root = true
@@ -21,3 +21,6 @@ indent_size = 4
 [{*.json,*.yml,*.bowerrc,*.babelrc}]
 indent_style = space
 indent_size = 2
+
+[.json]
+insert_final_newline = true
