--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# 2017 April 12
+# 2018 September 3
 # https://github.com/bevry/base
 
 # System Files
@@ -7,27 +7,11 @@
 # Temp Files
 yarn.lock
 **/.docpad.db
-**/out.*
 **/*.log
 **/*.cpuprofile
 **/*.heapsnapshot
 
-# Build Files
-build/
-components/
-bower_components/
-node_modules/
-out/
-*output/
-edition:*/
-coffeejs/
-coffee/
-es5/
-es2015/
-esnext/
-docs/
-
-# Editor Caches
+# Editor Files
 .c9/
 .vscode/
 
@@ -35,6 +19,23 @@ docs/
 .env
 .idea
 .cake_task_cache
+
+# Build Files
+**/out.*
+**/*.out.*
+**/out/
+**/output/
+build/
+components/
+bower_components/
+node_modules/
+edition*/
+coffeejs/
+coffee/
+es5/
+es2015/
+esnext/
+docs/
 
 
 # =====================================
