prettierignore: add custom section, add test/
replaces these lines of https://github.com/bevry/boundation/blob/a52ed917d13bda80a57c8f9a84a03cb713455ed5/source/base.js#L291-L294

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,4 @@
-# 2023 March 1
+# 2023 March 24
 # https://github.com/bevry/base
 
 # VCS Files
@@ -44,5 +44,13 @@ es2015/
 esnext/
 docs/
 
+# Development Files
+test/
+
 # Ecosystem Caches
 .trunk/*/
+
+# =====================================
+# CUSTOM
+
+# None
